# lara-sig-sprak-bot

./: Cargo.toml  chat_promote.txt  request.json.encrypted
.github/workflows/: release.yml  run.yml
src/: azure_tts.rs  bing_dictionary.rs  duolingo.rs  main.rs  telegram.rs  util.rs
src/edge_gpt/: conversation_meta.rs  session.rs  util.rs
src/telegram/: format.rs  mod.rs
