[package]
name = "lara-sig-sprak-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["rt", "macros", "rt-multi-thread"] }
teloxide = { version = "0.12.2", default-features = false }
reqwest = { version = "0.11.17", default-features = false, features = ["json", "rustls-tls"] }
hex = "0.4.3"
ezio = "0.1.2"
libaes = "0.6.4"
edge-gpt = "0.3.4"
redis = { version = "0.23.0", features = ["tokio-rustls-comp"] }
bytes = "1.4.0"
rand = "0.8.5"
isolang = "2.3.0"
