[package]
name = "lara-sig-sprak-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["rt", "macros", "rt-multi-thread"] }
teloxide = { version = "0.12.2", default-features = false }
reqwest = { version = "0.11.17", features = ["json", "cookies"] }
hex = "0.4.3"
ezio = "0.1.2"
libaes = "0.6.4"
redis = { version = "0.23.0", features = ["tokio-rustls-comp"] }
bytes = "1.4.0"
rand = "0.8.5"
isolang = "2.3.0"
thiserror = "1.0.40"
base64 = "0.21.0"
tokio-tungstenite = "0.18.0"
uuid = "1.3.2"
futures-util = "0.3.28"
edge-gpt = "0.3.3"
